homeworks/chornonoh/module-03/lesson-08/course-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  namespace: lesson-08
spec:
  replicas: 10
  selector:
    matchLabels:
      app: course-app
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: hbvhuwe/course-app:latest
          ports:
            - containerPort: 8080
              name: application
          resources:
            requests:
              memory: "100Mi"
              cpu: "125m"
            limits:
              memory: "200Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 10
            timeoutSeconds: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
