homeworks/chornonoh/module-03/lesson-08/course-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app
  namespace: lesson-08
  labels:
    app: course-app
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - port: 8080
      targetPort: 8080
