homeworks/chornonoh/module-03/lesson-08/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: lesson-08
spec:
  selector:
    app: database
  ports:
    - port: 6379
      targetPort: 6379
  clusterIP: None
