homeworks/chornonoh/module-03/lesson-08/course-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app
  namespace: lesson-08
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - course-app.local
      secretName: course-app-tls
  rules:
    - host: course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app
                port:
                  number: 8080
